clearing up the git branch

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,18 @@ bin/
 pythonFiles/item_similarity.db
 test_100k_withoutratings_new.csv
 null_values.txt
+pythonFiles/shuffled_test_ratings.csv
+pythonFiles/shuffled_train_ratings.csv
+pythonFiles/simpleMatrix.csv
+pythonFiles/user_matrix.csv
+
+pythonFiles/dev_set.db
+pythonFiles/out.csv
+pythonFiles/out1.csv
+pythonFiles/out2.csv
+pythonFiles/results.csv
+pythonFiles/results_test_1.csv
+pythonFiles/testing_set.db
+pythonFiles/training_split.db
+pythonFiles/test_ratings.db
+training_split.db
